--- a/learn_automation_new/test-output/old/Default suite/classes.html
+++ b/learn_automation_new/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>datadrivernTesting.WordpressLoginExcel</td>
+<td>certificateissue.Chrome</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Wordpresslogin</td>
+<td>handlecertificate</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
